# Convex_Hull

./: README.md  README.txt
A1/: 100000points.h  100points.cpp  160points.cpp  180points.h  190points.cpp  220points.cpp  220points.h  5000points.cpp  5000points.h  CMakeLists.txt  main.cpp
A2/: 10000points.h  1000points.cpp  100points.h  120points.cpp  120points.h  140points.cpp  140points.h  160points.h  180points.cpp  190points.h  300points.cpp  300points.h  500points.cpp  500points.h  CMakeLists.txt  main.cpp
A3/: 10000000points.cpp  10000000points.h  1000000points.h  100000points.cpp  10000points.cpp  1000points.h  CMakeLists.txt  main.cpp
