cmake_minimum_required(VERSION 3.23)
project(A1)

set(CMAKE_CXX_STANDARD 14)

add_executable(A1 main.cpp 100points.h 100points.cpp 120points.h 120points.cpp 140points.cpp 140points.h 160points.h 160points.cpp 180points.h 180points.cpp 190points.cpp 190points.h 220points.h 220points.cpp 300points.h 300points.cpp 500points.cpp 500points.h 1000points.h 1000points.cpp 10000points.h 10000points.cpp 100000points.h 100000points.cpp 5000points.h 5000points.cpp)
